# ImageColorMorph

./: .clang_format  CMakeLists.txt  README.md
include/: color.hpp  color_hist.hpp  color_morph.hpp  image_transformer.hpp  opencv_interface.hpp  util.hpp
include/opencv/: opencv_labels.hpp  opencv_transformers.hpp
src/: color_morph.cpp  color_stat.cpp
